# pyprecag

./: .bumpversion.toml  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  pylintrc  pyproject.toml  readthedocs.yml  requirments.txt  setup.cfg  setup.py  test_runner  tox.ini
.github/workflows/: python-package-conda-windows.yml  python-package-conda.yml  update_docs.yml  update_docs.yml.example
docs/: Dockerfile  conf.py  index.rst  installation.rst  requirements.txt  tutorial.rst  usage.rst
docs/reference/: index.rst  pyprecag.bandops.rst  pyprecag.config.rst  pyprecag.convert.rst  pyprecag.crs.rst  pyprecag.describe.rst  pyprecag.errors.rst  pyprecag.general.rst  pyprecag.kriging_ops.rst  pyprecag.misc.rst  pyprecag.processing.rst  pyprecag.raster_ops.rst  pyprecag.table_ops.rst  pyprecag.vector_ops.rst
pyprecag/: __init__.py  _compat.py  bandops.py  config.json  config.py  convert.py  crs.py  describe.py  errors.py  general.py  kriging_ops.py  misc.py  processing.py  proj.db  pyprecag.py  raster_ops.py  table_ops.py  vector_ops.py
pyprecag/tests/: __init__.py  make_dummy_data.py  test_bandops.py  test_config.py  test_convert.py  test_crs.py  test_describe.py  test_end2end.py  test_kriging_ops.py  test_processing.py  test_rasterops.py  test_table_ops.py  test_test.py  test_vector_ops.py
pyprecag/tests/data/: LineMZ_wgs84_MixedPartFieldsTypes_esri.dbf  LineMZ_wgs84_MixedPartFieldsTypes_esri.shp  LineMZ_wgs84_MixedPartFieldsTypes_esri.shx  LineMZ_wgs84_MixedPartFieldsTypes_exportedqgis.dbf  LineMZ_wgs84_MixedPartFieldsTypes_exportedqgis.shp  LineMZ_wgs84_MixedPartFieldsTypes_exportedqgis.shx  PointMZ_mga54_MixedPartFieldsTypes_noPrj.dbf  PointMZ_mga54_MixedPartFieldsTypes_noPrj.shp  PointMZ_mga54_MixedPartFieldsTypes_noPrj.shx  Poly_mga54_SinglePartFieldsTypes_qgis-prj.dbf  Poly_mga54_SinglePartFieldsTypes_qgis-prj.prj  Poly_mga54_SinglePartFieldsTypes_qgis-prj.shp  Poly_mga54_SinglePartFieldsTypes_qgis-prj.shx  area1_blocklayout_94mga54.dbf  area1_blocklayout_94mga54.shp  area1_blocklayout_94mga54.shx  area1_dummypoints_94mga54.csv  area1_onebox_94mga54.dbf  area1_onebox_94mga54.prj  area1_onebox_94mga54.shp  area1_onebox_94mga54.shx  area1_onebox_NDVI_250cm.tif  area1_yield_ascii_wgs84.csv  area2_blocklayout_94mga54.dbf  area2_blocklayout_94mga54.shp  area2_blocklayout_94mga54.shx  area2_high_trimmed.csv  area2_lowdensity_points.csv  area2_onebox_94mga54.dbf  area2_onebox_94mga54.prj  area2_onebox_94mga54.qpj  area2_onebox_94mga54.shp  area2_onebox_94mga54.shx  area2_yield_ISO-8859-1.csv  area2_yield_file_ISO-8859-1.csv  test_singleband_94mga54.tif
pyprecag/tests/examples/: example_CalcImageIndices.py  (+10 more)
scripts/: list_tests.py  porting_test.sh
(+25 files in other folders)
