[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprecag"
dynamic = ["version"]
description = "A suite of tools for Precision Agriculture"
readme = "README.rst"
license = { text = "BSD 3-Clause" }
authors = [
    { name = "Christina Ratcliff", email = "pat@csiro.au" },
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "chardet",
    "future",
    "rasterio",
    "geopandas",
    "matplotlib",
    "pyproj",
    "scipy",
    "six>1.12.0",
    "unidecode",
]

[project.optional-dependencies]
dev = [
    "bumpversion",
    "check-manifest",
    "ipdb",
    "ipython",
    "pylint",
    "readme_renderer",
    "sphinx",
    "sphinx_rtd_theme",
    "twine",
    "wheel",
]
test = [
    "pylint",
    "tox",
]

[project.urls]
Homepage = "https://github.com/CSIRO-Precision-Agriculture/pyprecag"
[tool.setuptools.dynamic]
version = {attr = "pyprecag.__version__"}